@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` VALUES ('1', 'Combat:ArcheryStationaryPenalty', '1.0','Damage Penalty for moving or rooted targets.  1 = 50% penalty (Default), 2 = no penalty, 0 = 100% penalty');
